<resources>
    <string name="app_name">ToDoアプリ</string>
    <string name="message2345">Message2345</string>
    <string name="meat" />
    <string name="scheduleTime">予定日</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">通知</string>
    <string name="sendNotification">通知する</string>
    <string name="doNotSendNotification">通知しない</string>
    <string name="memo">メモ</string>
    <string name="sendNotificationSchedule">予定を通知</string>
    <string name="title">タイトル</string>
    <string name="title_activity_detail_to_do_app">DetailToDoAppActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>

