<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            type="com.example.todoapp.ToDoMakeViewModel"
            name="viewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".ToMakeListFragment">


        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_style"
            android:hint="@string/title"
            android:inputType="text"
            android:text="@={viewModel.title}"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/memo"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_style"
            android:hint="@string/memo"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.017" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/memo"
            app:layout_constraintTop_toBottomOf="@+id/memo">

            <TextView
                android:id="@+id/scheduledTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/scheduleTime" />

            <TextView
                android:id="@+id/editScheduledTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_style"
                android:ems="10"
                android:text="@{viewModel.scheduledDate}"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="442dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/memo"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/notification" />

            <RadioGroup
                android:id="@+id/radioGroupSendNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="440dp">

                <RadioButton
                    android:id="@+id/sendNotificationTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sendNotification"
                    android:value="true"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="416dp" />

                <RadioButton
                    android:id="@+id/sendNotificationFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doNotSendNotification"
                    android:value="false"
                    tools:layout_editor_absoluteX="149dp"
                    tools:layout_editor_absoluteY="418dp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/toMakeToDoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sendNotificationSchedule"
            android:enabled="@{viewModel.isButtonEnabled}"
            android:elevation="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UsingOnClickInXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>